src/less/dashboard.less
.dashboard-content {
  padding: 0 15px;
}

.logout-button {
  float: right;
  margin-top: 14px;
  @media (max-width: 450px) {
    &.mui-enhanced-button.mui-is-link-button {
      display: none;
    }
  }
}

.heading {
  margin: 10px 0 10px 10px;
}

// Users
.users-list {
  list-style: none;
  margin: 10px 0;
}

.users-list-item {
  @backgroundColor: #eee;
  background-color: @backgroundColor;
  padding: 10px;
  overflow: hidden;

  &.odd {
    background-color: lighten(@backgroundColor, 3%);
  }

  .preview {
    float: left;
  }

  .actions {
    float: right;
  }
}

// Questions
.question-view {
  padding: 0 20px 20px;
}
.choices-input {
  list-style: none;
  max-height: 500px;
  overflow: auto;
  &::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 7px;
  }
  &::-webkit-scrollbar-thumb {
      border-radius: 4px;
      background-color: rgba(0,0,0,.5);
      -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
  }

  li {
    border-bottom: 3px solid #ddd;
    padding: 5px 0;
    margin: 0 0 5px;
  }
}

